codepkg/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>BankAccount__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Card</label>
        <referenceTo>Card__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CheckDateText__c</fullName>
        <label>CheckDateText</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckDate__c</fullName>
        <formula>IF( MONTH(  DATEVALUE(CreatedDate) )  =  MONTH( TODAY() )  , &quot;yes&quot;, &quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Get_Email_after_transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Email after transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Merchant</label>
        <referenceTo>Merchant__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionNumber__c</fullName>
        <externalId>true</externalId>
        <label>TransactionNumber</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>write-off of money</fullName>
                    <default>true</default>
                    <label>write-off of money</label>
                </value>
                <value>
                    <fullName>replenishment of money</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>moneySign__c</fullName>
        <formula>IF(ISPICKVAL( Transaction_Type__c , &quot;write-off of money&quot;) , Amount__c *(-1),  Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>moneySign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CheckTransactionType</fullName>
        <active>true</active>
        <errorConditionFormula>Merchant__c = null  &amp;&amp; ISPICKVAL(Transaction_Type__c, &apos;write-off of money&apos;)</errorConditionFormula>
        <errorMessage>Please, choose Merchant!</errorMessage>
    </validationRules>
</CustomObject>